<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        android:textColor="#E33F3F"
        android:layout_marginTop="100dp"
        android:id="@+id/gameOverText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/game_over"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textStyle="bold"
        android:id="@+id/scoreText"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/gameOverText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/your_score"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textStyle="bold"
        android:background="#A73DE1"
        android:padding="20dp"
        android:id="@+id/finalScoreText"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/number"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:text="@string/play_again"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".1"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finalScoreText"
        android:id="@+id/playAgainBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>