<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:background="#AF14CA"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/timeText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:padding="20dp"
        android:background="#2EB8CA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/totalQuestionText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        app:layout_constraintTop_toBottomOf="@id/timeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/questionText"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionText"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/option"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:id="@+id/button0"
                android:tag="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/option"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:id="@+id/button1"
                android:tag="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/option"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:layout_margin="20dp"
                android:id="@+id/button2"
                android:tag="2"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/option"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:id="@+id/button3"
                android:tag="3"/>
        </LinearLayout>
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:background="@drawable/button_bg"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/option"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_margin="20dp"-->
<!--            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"-->
<!--            android:id="@+id/button2"-->
<!--            android:tag="2"/>-->
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:background="@drawable/button_bg"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/option"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_margin="20dp"-->
<!--            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"-->
<!--            android:id="@+id/button3"-->
<!--            android:tag="3"/>-->
    </LinearLayout>
    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/answer"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option" />
</androidx.constraintlayout.widget.ConstraintLayout>